@startuml ClassDiagram_VocabMaster_Simplified
title Sơ đồ Class (đơn giản hóa) của VocabMaster

skinparam classAttributeIconSize 0
skinparam packageStyle rectangle

package "Models" {

    class ChuDe {
        + IdChuDe : int
        + TenChuDe : string
        + ChuDe()
        + ToString() : string
    }

    class TuVung {
        + IdTuVung : int
        + TiengAnh : string
        + PhienAm : string
        + TiengViet : string
        + LoaiTu : string
        + ChuDe : ChuDe
        + DaThuoc : bool
        + TuVung()
    }

    class TuVungKho {
        + IdTuVung : int
        + SoLanSai : int
        + NgaySaiCuoiCung : DateTime
        + ThongTinTuVung : TuVung
        + TuVungKho()
    }

    class LichSuHocTap {
        + IdLichSu : int
        + NgayHoc : DateTime
        + SoCauDung : int
        + TongSoCau : int
        + TiLePhanTram : double
        + LichSuHocTap()
    }

    class CauHoi {
        + TuChinh : TuVung
        + CacTuVungSai : List<TuVung>
        + CacDapAnTuVung : List<TuVung>
        + CauHoi()
    }

    ' Quan hệ giữa các entity
    TuVung "1" o-- "0..1" ChuDe : thuộc
    TuVungKho "1" --> "1" TuVung : IdTuVung
    CauHoi "1" --> "1" TuVung : TuChinh
    CauHoi "1" --> "3" TuVung : CacTuVungSai
    CauHoi "1" --> "4" TuVung : CacDapAnTuVung
}

package "Helpers & Services" {

    class DatabaseHelper {
        - _chuoiKetNoi : string
        + LayDuLieu(cauLenhSql : string) : DataTable
        + ThucThiLenh(cauLenhSql : string) : int
    }

    class DichThuatService {
        - _boDich : AggregateTranslator
        - _httpClient : HttpClient
        + TraCuuTuDayDu(tuTiengAnh : string) : Task<KetQuaTraCuu>
    }

    class KetQuaTraCuu {
        + NghiaTiengViet : string
        + PhienAm : string
        + CacLoaiTu : string
    }

    DichThuatService o-- KetQuaTraCuu

    class LuyenTapService {
        - _danhSachTuVung : List<TuVung>
        - _random : Random
        + LuyenTapService(danhSachTu : List<TuVung>)
        + TaoDeThi(soLuongCauHoi : int) : List<CauHoi>
    }

    ' Quan hệ giữa services và models
    LuyenTapService --> TuVung
    LuyenTapService --> CauHoi
}

@enduml